--- a/app/src/main/res/drawable/bg_chat_from_bot.xml
+++ b/app/src/main/res/drawable/bg_chat_from_bot.xml
@@ -7,16 +7,16 @@
             android:pivotY="0%"
             android:toDegrees="0">
             <shape android:shape="rectangle">
-                <solid android:color="#C0C0C0"/>
+                <solid android:color="@color/cyan_100"/>
             </shape>
         </rotate>
     </item>
     <item android:left="10dp">
         <shape android:shape="rectangle">
-            <solid android:color="#C0C0C0"/>
+            <solid android:color="@color/cyan_100"/>
             <corners android:bottomLeftRadius="6dp"
-                     android:bottomRightRadius="6dp"
-                     android:topRightRadius="6dp"/>
+                android:bottomRightRadius="6dp"
+                android:topRightRadius="6dp"/>
         </shape>
     </item>
 </layer-list>
