--- a/app/src/main/res/drawable/bg_chat_to_bot.xml
+++ b/app/src/main/res/drawable/bg_chat_to_bot.xml
@@ -7,13 +7,13 @@
             android:pivotY="0%"
             android:toDegrees="0" >
             <shape android:shape="rectangle" >
-                <solid android:color="#D1FFB8" />
+                <solid android:color="@color/cyan_400" />
             </shape>
         </rotate>
     </item>
     <item android:right="10dp">
         <shape android:shape="rectangle" >
-            <solid android:color="#FFD1FFB8" />
+            <solid android:color="@color/cyan_400" />
             <corners
                 android:bottomLeftRadius="6dp"
                 android:bottomRightRadius="6dp"
