--- a/app/src/main/res/layout/message_bubble.xml
+++ b/app/src/main/res/layout/message_bubble.xml
@@ -19,7 +19,7 @@
         android:paddingTop="8dp"
         android:paddingEnd="20dp"
         android:paddingBottom="8dp"
-        android:text="Misalnya ini chat dari doi"
+        tools:text="Misalnya ini chat dari doi"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,7 +31,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
         android:textColor="#737272"
-        android:text="16 May, 2:05 PM"
+        tools:text="16 May, 2:05 PM"
         android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/tv_msg"
