--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.Capstone" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Capstone" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="colorPrimary">@color/cyan_600</item>
         <item name="colorPrimaryVariant">@color/cyan_700</item>
         <item name="colorOnPrimary">#FFFFFF</item>
