--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.Capstone" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Capstone" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="colorPrimary">@color/cyan_700</item>
         <item name="colorPrimaryVariant">@color/cyan_900</item>
         <item name="colorOnPrimary">@color/black</item>
@@ -8,6 +8,8 @@
         <item name="colorSecondary">@color/cyan_200</item>
         <item name="colorSecondaryVariant">@color/cyan_300</item>
         <item name="colorOnSecondary">@color/black</item>
+        <!-- Text Color -->
+        <item name="android:textColor">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >@color/cyan_800</item>
 
