Added Accesbility Activity, changed some default icons and some optimization

--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -49,7 +49,7 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginStart="8dp"
-                android:src="@drawable/ic_baseline_account_circle_24"
+                android:src="@drawable/asset_chatbot"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +91,7 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginStart="8dp"
-                android:src="@drawable/ic_baseline_account_circle_24"
+                android:src="@drawable/asset_information"
                 android:contentDescription="@string/icon_category_desc"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -133,7 +133,7 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginStart="8dp"
-                android:src="@drawable/ic_baseline_account_circle_24"
+                android:src="@drawable/asset_information"
                 android:contentDescription="@string/icon_category_desc"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -175,7 +175,7 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginStart="8dp"
-                android:src="@drawable/ic_baseline_account_circle_24"
+                android:src="@drawable/asset_coupon"
                 android:contentDescription="@string/icon_category_desc"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -217,7 +217,7 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginStart="8dp"
-                android:src="@drawable/ic_baseline_account_circle_24"
+                android:src="@drawable/asset_money"
                 android:contentDescription="@string/icon_category_desc"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -259,7 +259,7 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginStart="8dp"
-                android:src="@drawable/ic_baseline_account_circle_24"
+                android:src="@drawable/asset_qrcode"
                 android:contentDescription="@string/icon_category_desc"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
