--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,6 +85,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#e4e4e4"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
@@ -104,6 +105,7 @@
                 android:minHeight="48dp"
                 android:paddingVertical="10dp"
                 android:paddingLeft="16dp"
+                android:layout_margin="8dp"
                 android:paddingRight="16dp"
                 android:singleLine="false"
                 android:textColor="@color/black"
