--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:id="@+id/recyclerview_chat"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:contentDescription="@string/daftar_pesan"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/frame_layout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +78,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/back_to_category"
-                android:contentDescription="@string/back_to_category"/>
+                android:contentDescription="@string/kembali_ke_kategori"/>
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
