--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/toolbarCustom"
     android:layout_width="match_parent"
+    android:contentDescription="@string/sloka"
     android:layout_height="wrap_content">
 
     <RelativeLayout
