--- a/app/src/main/res/drawable/edittext_chat.xml
+++ b/app/src/main/res/drawable/edittext_chat.xml
@@ -2,4 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@android:color/white"/>
     <corners android:radius="25dp"/>
+    <stroke android:color="@color/black" android:width="0.5dp"/>
 </shape>
