--- a/app/src/main/res/layout/activity_accessbility.xml
+++ b/app/src/main/res/layout/activity_accessbility.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="?attr/background"
     android:layout_height="match_parent"
     tools:context=".ui.AccessbilityActivity">
 
@@ -65,6 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="35dp"
+        android:background="@color/float_transparent"
         app:layout_constraintTop_toBottomOf="@id/guideline60"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/guideline80">
@@ -74,6 +76,7 @@
             android:contentDescription="@string/tidak_menggunakan_aksesbilitas"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:backgroundTint="?attr/background"
             app:cardCornerRadius="@dimen/rounded_radius"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -103,6 +106,7 @@
             android:id="@+id/voiceBtn"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:backgroundTint="?attr/background"
             app:cardCornerRadius="@dimen/rounded_radius"
             android:contentDescription="@string/menggunakan_aksesbilitas"
             app:layout_constraintTop_toTopOf="parent"
